# titanium-training

./: .env.example  .gitignore  AceV13.1.html  ENGINE_IMPROVEMENT_HANDOFF.md  HANDOFF_BROKE_SIDE_RACE.md  HANDOFF_CAT_LMR_PRUNING.md  HANDOFF_REMAINING_WALL_RACE_LAYERS.md  ORACLE_SETUP.md  OVERNIGHT_ENGINE_HANDOFF.md  OVERNIGHT_FLYWHEEL_HANDOFF.md  OVERNIGHT_REPAIR_HANDOFF.md  README.md  TITANIUM_NEXT_CHAT_HANDOFF.md  configure_oracle_search.ps1  deploy_oracle_worker.ps1  open_oracle_tunnel.ps1  oracle_rebuild.sh  overnight_training.bat  overnight_training_reset.bat  pull_oracle_results.ps1  push_oracle_generation.ps1  rebuild_website_wasm.bat  run_overnight.bat  run_viz.bat  start_oracle_worker.ps1  start_overnight_pool.bat  start_overnight_pool.ps1  start_overnight_safe.bat  start_selfplay.bat  start_training.bat  start_wallz_lab.bat  start_zeroink.bat  status_oracle_worker.ps1  stop_oracle_worker.ps1  stop_training.ps1
.claude/: launch.json
docs/: ARCHITECTURE.md  DATASET.md  ENGINE_INTEGRATION.md  HCE_EXPERIMENT_RESULTS.md  OPERATIONS.md  ORACLE_DEPLOYMENT.md  README.md  REPOSITORY_MAP.md  ROADMAP.md  TECHNICAL_DEBT.md  TRAINING.md  TROUBLESHOOTING.md
research/: README.md
results/: DIVERSITY_SPEC_V1.md
tools/: bisect_titanium_nps.ps1  flamegraph_titanium_search.ps1  oracle_compute.ps1  overnight_engine_improve.py
tools/position_store_importer/: Cargo.toml
training/: ARCHITECTURE_HANDOFF.md  AUDIT_REPORT.md  PHASE3_LMRH_RUNBOOK.md  POSITION_STORE_RUNBOOK.md  README.md  REDUCTION_SIDECAR_REPORT.md  SEARCH_PRESSURE_REPORT.md  _check_dbs.py  _check_store.py  (+126 more)
(+539 files in other folders)
