[package]
name = "position_store_importer"
version = "0.1.0"
edition = "2021"
description = "Multicore micropool importer for pathless teacher positions (friend shards)"
license = "GPL-3.0-or-later"
build = "build.rs"

[[bin]]
name = "import_teacher_store"
path = "src/main.rs"

[dependencies]
micropool = "0.3.0"
rusqlite = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
blake2 = "0.10"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
flate2 = "1"
anyhow = "1"
thiserror = "1"
hex = "0.4"
crc32fast = "1"
num_cpus = "1"
chrono = { version = "0.4", features = ["clock"] }
libsql = "0.9.30"
tokio = { version = "1", features = ["full"] }
turso = "0.6.1"

[dev-dependencies]
tempfile = "3"
